# wuxia2kindle

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Justfile  Makefile  bacon.toml  crontab  devenv.nix  fly.toml  justfile  readme.md  todo.md
app/: .envrc  .gitignore  Cargo.toml  bacon.toml  devenv.nix  flake.nix  justfile  rust-toolchain.toml  schema.sql
app/.sqlx/: query-022dda1d125f83411b83482f17361f7c6eb4f15240b312758cd7060c26c2fe74.json  query-2f5e3586c79f15593f1b7b236cf74e2142911772a21bd199ccc253410b0097db.json  query-318e8550690c41aca58f6c933ffb55ba753dcad00150aed327f78c3e66483adf.json  query-3f7c732e09fe54025c610f76aaff7882fd9700e8e376932e3d53982c73f1b4f4.json  query-464725c9f9aba7653ddefb5281ec5ecacfab9b0d109c71e80ed731f96eab9370.json  query-49195cd1949b2d6454cd1c708728f24402dbf5f32329d446b88663e7fe0021ae.json  query-4b1a301e061cce877fc1332dfd446b969dd4f9ba1f26ca12956259331c9fb890.json  query-4dc8da6481b7cb93b67ab9934e38346b13fe7c7423ca35ff8acf36d7eabebd86.json  query-52708d86172d3c55b23f29c0d5c796c6743cd2d17465bfd17247e399d2fef60b.json  query-53f7155af02f6d3e0d3c7fbc38473f86de19123faa925cb14a69f58927832434.json  query-80aab1f433917c23c63e039a9a770f88fd789adbea37d327461ff1f34f97fd48.json  query-86be89daa4d715eeb50ab0a17180e77723730f93428f8cc1ae0d3d9dd61b8b49.json  query-8cf02f951bfdd72c3cee8cffac4b7c1e9815dceeeddc80b921f62f0e09956335.json  query-a13be12453c03b65bbd9f7dc6bdbe319805e214d0943b40ff4b0d9ee2c1ad7b2.json  query-a78005448f3829a0862af854b96d6bdd917ad31f102a7a087195d4e9bf3aa577.json  query-a975e1daa85aa92dab9f706ddb1628a667c1af21fdda2647eac3f656b0b36c57.json  query-a98a105461ba797d732673a01e5864d7ec010d075cea3e90355193dd022a3afb.json  query-ae23ba198e97c1c3c121571ac6f0d883a74ae030c31e44ed9a4861ee58112429.json  query-b3b815c1055e48bfc91a52b8bbd4697a177abd25ff52f66c8abe6c6dbdb2a964.json  query-cf0fc154d766c37decc5dd5ab067d680d375c0335c76b3feb17b79a63c54c98f.json  query-d0b3590c0e299f65c70f3c31ddd137b8f777fe7d7c7998aefe7a6e416093ee6c.json  query-d567c70f875c11aec6dd2510613a17ef0bbd0f3dfefa7f39f4b2da3d33120205.json  query-dec7425d182f8333ed5b4f0d19f4dab630fef972d7418382b2496e6c6beaff09.json  query-df6d56ad22dbbf0ae6d78e89b40dacf405156d29de23f378cdee3f8ce7d4c1f1.json  query-e149b81d87a22420a166fc45f63aded3ace077d0f30a62b9b05ed5e43579cc99.json  query-ec29b984e318880ed4fb0eebe7cf758c2cb1c37cb2ed690b0f9d5a7d9b018070.json  query-f792bce1741edbefac8b472a01d21022110b0bff9ef40f5ab0a99d60078492b4.json  query-fdfeff13ae0072ea345a5a884951369977287ac55d73f71a10dc699516e72b77.json
app/migrations/: 20230715125851_book_cover.sql  20231104092715_users.sql
app/src/: epub.rs  ingest.rs  main.rs  models.rs  pool.rs  worker.rs
app/src/auth/: callback.rs  cookie.rs  discord.rs  jwt.rs  mod.rs  oauth.rs  user.rs
app/src/server/: files.rs  health.rs  mod.rs
app/src/server/auth/: callback.rs  cookie.rs  jwt.rs  login.rs  logout.rs  mod.rs  oauth.rs  user.rs
app/src/server/books/: get.rs  mod.rs  update.rs
app/src/server/chapters/: add.rs  get.rs  mod.rs
app/src/server/components/: avatar.rs  books.rs  cover.rs  mod.rs
app/src/server/exports/: add.rs  mod.rs
app/src/server/pages/: book.rs  chapter.rs  home.rs  login.rs  mod.rs  settings.rs
app/src/static/: .gitignore  .prettierrc.toml  package.json  pnpm-lock.yaml
app/src/static/src/: home.html  index.html  login.html
app/src/worker/: mod.rs
app/templates/: authenticated.html  avatar.html  base.html  book.html  chapter.html  cover.html  home.html  login.html
app/templates/partials/: books.html  export-btn.html  token.html
crates/models/: Cargo.toml
crates/models/src/: book.rs  chapter.rs  epub.rs  export.rs  lib.rs  user.rs
src/: env.rs  (+1 more)
(+96 files in other folders)
