[package]
name = "wuxia2kindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
askama = { version = "0.12.1", features = [
  "with-axum",
  "mime",
  "mime_guess",
  "serde",
  "serde-json",
  "markdown",
] }
askama_axum = "0.3.0"
axum = { version = "0.6.18", features = ["macros"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
epub-builder = "0.5.0"
include_dir = "0.7.3"
jsonwebtoken = "9.1.0"
lettre = "0.10.4"
log = "0.4.20"
mime_guess = "2.0.4"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7.0", features = [
  "postgres",
  "runtime-tokio-rustls",
  "time",
  "chrono",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.4", features = [
  "cors",
  "add-extension",
  "trace",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
uuid = { version = "1.4.0", features = ["v4"] }
sha2 = { version = "0.10.0", default-features = false }
rand = "0.8.5"
bcrypt = "0.15.0"
